--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,6 @@ HTMLParser==0.0.2
 ipython==8.13.1
 ipywidgets==8.1.1
 Jinja2==3.1.2
-jnius==1.1.0
 keyring==24.3.0
 langchain==0.0.352
 lockfile==0.12.2
@@ -19,6 +18,7 @@ numpy==1.24.3
 Pillow==10.0.0
 Pillow==10.1.0
 protobuf==4.25.1
+pyjnius==1.6.1
 pyOpenSSL==23.3.0
 PyPDF2==3.0.1
 python-dotenv==1.0.0
