--- a/requirements.txt
+++ b/requirements.txt
@@ -27,5 +27,5 @@ streamlit==1.28.0
 thread==0.1.3
 tornado==6.3.1
 trove_classifiers==2023.11.29
-truststore==0.8.0
-urllib3_secure_extra==0.1.0
+truststore
+urllib3_secure_extra
