--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,30 @@
-attr==0.3.2
-ConfigParser==6.0.0
-contextlib2==21.6.0
-cryptography==41.0.3
-Cython==3.0.7
-dl==0.1.0
-docutils==0.18.1
-docutils==0.18.1
-HTMLParser==0.0.2
-ipython==8.13.1
-ipywidgets==8.1.1
-Jinja2==3.1.2
-keyring==24.3.0
-langchain==0.0.352
-lockfile==0.12.2
-mock==5.1.0
-numpy==1.24.3
-Pillow==10.0.0
-protobuf==4.25.1
-pyjnius==1.6.1
-pyOpenSSL==23.3.0
-PyPDF2==3.0.1
-python-dotenv==1.0.0
-railroad==0.5.0
-Sphinx==7.2.6
-streamlit==1.28.0
-thread==0.1.3
-tornado==6.3.1
-trove_classifiers==2023.11.29
+attr
+ConfigParser
+contextlib2
+cryptography
+Cython
+dl
+docutils
+docutils
+HTMLParser
+ipython
+ipywidgets
+Jinja2
+keyring
+langchain52
+lockfile
+mock
+numpy
+Pillow
+protobuf
+pyjnius
+pyOpenSSL
+PyPDF2
+python-dotenv
+railroad
+Sphinx
+streamlit
+thread
+tornado
+trove_classifiers9
 
