--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,7 @@
-attr
-ConfigParser
-contextlib2
-cryptography
-Cython
-dl
-docutils
-docutils
-HTMLParser
-ipython
-ipywidgets
-Jinja2
-keyring
-langchain52
-lockfile
-mock
-numpy
-Pillow
-protobuf
-pyjnius
-pyOpenSSL
-PyPDF2
-python-dotenv
-railroad
-Sphinx
-streamlit
-thread
-tornado
-trove_classifiers9
+HTMLParser==0.0.2
+langchain==0.0.352
+PyPDF2==3.0.1
+python-dotenv==1.0.0
+streamlit==1.28.0
+
 
